--- a/tailwind/utilities/helpers.css
+++ b/tailwind/utilities/helpers.css
@@ -69,6 +69,16 @@
   w-full;
 }
 
+.fancybox-content.initialPopup {
+  @apply 
+  max-w-[490px]
+  p-4
+  lg:px-7 py-9;
+}
+
+.initialPopup .fancybox-close-small {
+  @apply text-white;
+}
 
 .luxury-tab .active:after {
   @apply
